Fix jumping of image select in meta boxes.

--- a/css/metabox-tabs.css
+++ b/css/metabox-tabs.css
@@ -187,7 +187,9 @@ img.action {
 
 .image_select img {
 	margin-right: 10px;
+  padding: 1px;
 }
 .image_select img.selected {
 	border: 1px solid #900;
+  padding: 0;
 }
